# OpenPLi-PC

./: 0_INSTALL_ALL.sh  1_build_e2_procfs.sh  2_build_environment.sh  2_build_libs.sh  3_build_libs.sh  3_build_libsigc_3.0.sh  3_build_own_libs.sh  4_build_libsigc_3.0.sh  4_build_libxine.sh  4_optional_partial_environment_22.04.sh  5_build_libxine.sh  5_build_openpliPC.sh  6_build_openpliPC.sh  6_build_plugins.sh  7_build_plugins.sh  8_build_lirc.sh  8_build_plugins.sh  8_install_lirc.sh  9_build_lirc.sh  INSTALL_ALL.sh  README.EN  TREE.EN  TROUBLESHOOTING_AND_SOLVING
dvbsoftwareca-5x/: dvb_softwareca.c
patches/: AddStreamUrl.patch  (+64 more)
plugins/enigma2-plugins/: Makefile.am  configure.ac
plugins/enigma2-plugins/antiscrollbar/src/: plugin.py
plugins/enigma2-plugins/automaticvolumeadjustment/src/: AutomaticVolumeAdjustment.py  AutomaticVolumeAdjustmentConfig.py  AutomaticVolumeAdjustmentSetup.py  __init__.py  plugin.py
plugins/enigma2-plugins/bitrate/: bitrate.py  plugin.py
plugins/enigma2-plugins/epgrefresh/src/: EPGRefreshResource.py  OrderedSet.py  plugin.py
plugins/enigma2-plugins/epgsearch/src/: EPGSearch.py
plugins/enigma2-plugins/ftpbrowser/src/: FTPServerManager.py
plugins/enigma2-plugins/networkbrowser/src/: AutoMount.py  MountView.py  NetworkBrowser.py
plugins/enigma2-plugins/pluginhider/po/: Makefile.am  ru.po
plugins/enigma2-plugins/pluginhider/src/: PluginHiderSetup.py  plugin.py
plugins/enigma2-plugins/recordinfobar/src/: plugin.py
plugins/enigma2-plugins/satipclient/src/: plugin.py
plugins/enigma2-plugins/systemtime/src/: plugin.py
(+112 files in other folders)
